--- a/src/pages/articles/2022-02-09-starting-my-blog.mdx
+++ b/src/pages/articles/2022-02-09-starting-my-blog.mdx
@@ -6,6 +6,12 @@ categories: [Jekyll, Ruby, Bundle]
 image: assets/images/shift2_menu_career_2.jpg
 featured: true
 toc: true
+date: "2022-02-09"
+
+hero_image: "../article_images/street.webp"
+hero_image_alt: "Picture of someone holding bags"
+hero_image_credit_text: "Christopher Ayme"
+hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
 
