articled links working correctly

--- a/src/pages/blog/my-first-post/index.mdx
+++ b/src/pages/blog/my-first-post/index.mdx
@@ -15,7 +15,7 @@ hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
 
-# Starting my own blog.
+Starting my own blog. does this work or not? why does this get renderedd/???
 
 I had to figure out how to express myself properly. Facebook, Instagram and Twitter weren't a good option due personal reasons and more.
 
