--- a/src/pages/blog/my-first-post/index.mdx
+++ b/src/pages/blog/my-first-post/index.mdx
@@ -3,19 +3,20 @@ layout: post
 title:  "Starting my blog"
 author: Guillermo Zaandam
 categories: [Jekyll, Ruby, Bundle]
-image: assets/images/shift2_menu_career_2.jpg
 featured: true
 toc: true
 date: "2022-02-09"
 
-hero_image: "../article_images/street.webp"
+hero_image: "./manos.jpg"
 hero_image_alt: "Picture of someone holding bags"
 hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
 
-Starting my own blog. does this work or not? why does this get renderedd/???
+sdfnsdhigbdogbodabogbdogbfodabogsbogbogsouabgodbsoadbGowbȣdsbgofabosdgboewsbodgbosdbos
+fgwejodignurendognares
+wednugornaeognurnaogrew
 
 I had to figure out how to express myself properly. Facebook, Instagram and Twitter weren't a good option due personal reasons and more.
 
