--- a/src/pages/blog/my-second-post/index.mdx
+++ b/src/pages/blog/my-second-post/index.mdx
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Starting my blog"
+title:  "Starting my blog sdjhfbjdsbhfdbhbfjdsbfjsb"
 author: Guillermo Zaandam
-categories: [Jekyll, Ruby, Bundle]
-image: assets/images/shift2_menu_career_2.jpg
+categories: [uhuh, no, yeah]
+image:
 featured: true
 toc: true
 date: "2022-02-09"
