--- a/src/pages/blog/my-second-post/index.mdx
+++ b/src/pages/blog/my-second-post/index.mdx
@@ -3,12 +3,12 @@ layout: post
 title:  "Starting my blog sdjhfbjdsbhfdbhbfjdsbfjsb"
 author: Guillermo Zaandam
 categories: [uhuh, no, yeah]
-image:
+image: "./manos.jpg"
 featured: true
 toc: true
 date: "2022-02-09"
 
-hero_image: "../article_images/street.webp"
+hero_image: "./manos.jpg"
 hero_image_alt: "Picture of someone holding bags"
 hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
